<resources>
    <string name="app_name">AquaControl</string>
    <string name="on">"ON"</string>
    <string name="off">"OFF"</string>
    <string name="ok">"OK"</string>
    <string name="cancel">"Anuluj"</string>
    <string name="error">"Błąd"</string>
    <string name="exit">"Wyjście"</string>
    <string name="time_range">"Zakres czasu"</string>
    <string name="time_range_error">"Czas zakończenia musi być późniejszy niż czas rozpoczęcia!"</string>
    <string name="no_devices_detected">"Brak wykrytych urządzeń."</string>
    <string name="error_connecting">Problem z połączeniem</string>
    <string name="error_setting">Nie udało się ustawić stanu.</string>
    <string name="no_wifi_error">Aplikacja wymaga do działania włączonego WiFi.</string>
    <string name="open_settings">Otwórz ustawienia</string>
    <string name="no_internet_error">Aplikacja wymaga do działania połączenia z internetem.</string>
    <string name="mqtt_login">Podaj dane MQTT"</string>
    <string name="user">"Użytkownik"</string>
    <string name="pass">"Hasło"</string>
    <string name="ipbroker">Adres IP brokera</string>
    <string name="mqttt_connection_end">Rozłączono z MQTT</string>
    <string name="set_time">Ustaw czas</string>
    <string name="device_name">Nazwa urządzenia</string>
    <string name="label_start">Start:</string>
    <string name="label_end">Koniec:</string>
    <string name="lamp_1">Lampa 1</string>
    <string name="lamp_2">Lampa 2</string>
    <string name="lamp_3">Lampa 3</string>
    <string name="lamp_4">Lampa 4</string>
    <string name="temperature_value">Temperatura: %1$.1f &#176;C</string>
    <string name="temperature_unavailable">Temperatura: --.- &#176;C</string>
    <string name="switch_off">OFF</string>
    <string name="settings">settings</string>
</resources>